--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+ Copyright (C) 2009-2010 Aubort Jean-Baptiste (Rorist)
+ Licensed under GNU's GPL 2, see README
+-->
 <project name="SmbExploit" default="help">
 
     <!-- The local.properties file is created and updated by the 'android' tool.
